# parakatt

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  Makefile  README.md  STT_OVERHAUL.md  cliff.toml  project.yml  test_e2e.swift  test_shared_mic.swift
.claude/commands/: merge-pr.md  ship.md  tag.md
.github/workflows/: release.yml  test.yml
Launcher/: main.swift
Parakatt/: Info.plist  Parakatt.entitlements
Parakatt/App/: AppDelegate.swift  AppState.swift  EntryPoint.swift  ParakattApp.swift
Parakatt/Bridge/: CoreBridge.swift  ObjCExceptionCatcher.h  ObjCExceptionCatcher.m  ParakattApp.h
Parakatt/Services/: AudioCaptureService.swift  AudioSourceService.swift  ContextService.swift  (+8 more)
Tests/: FileLogServiceTests.swift  KeychainServiceTests.swift  TextInsertionServiceTests.swift
config/: default.toml
crates/parakatt-core/: Cargo.toml  build.rs
crates/parakatt-core/examples/: test_audio_file.rs  test_llm.rs  test_llm_direct.rs  test_parakeet.rs
crates/parakatt-core/src/: audio.rs  config.rs  dictionary.rs  download.rs  engine.rs  filler.rs  lib.rs  local_agreement.rs  models.rs  modes.rs  session.rs  storage.rs  util.rs  vad.rs
crates/parakatt-core/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/parakatt-core/src/stt/: mod.rs  nemotron.rs  parakeet.rs  streaming.rs
crates/parakatt-core/tests/: audio_pipeline_e2e.rs  integration_test.rs  streaming_e2e.rs
docs/: index.html  script.js  style.css
homebrew/: parakatt.rb
parakatt-icons/: README.md
scripts/: sync-version.sh
(+16 files in other folders)
